1.사용자 화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".sqlite3.Sqlite3Activity"></activity>
+        <activity android:name=".sqlite3.Sqlite3Activity" />
+        <activity android:name=".userinfo.UserInfoActivity"></activity>
     </application>
 
 </manifest>
